--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,9 @@ services:
       - GRADLE_USER_HOME=/usr/local/.gradle
     depends_on:
       - db
-    command: >
-      bash -c "./gradlew build &&
-      java -jar ./build/libs/demo-0.0.1-SNAPSHOT.jar"
+#    command: >
+#      bash -c "./gradlew build &&
+#      java -jar ./build/libs/demo-0.0.1-SNAPSHOT.jar"
 
   db:
     container_name: db
